# cp-library

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/bundle/: Cargo.toml  README.md
crates/bundle/src/: build.rs  lib.rs  refine.rs  source.rs  workspace.rs
crates/bundle/tests/: common.rs  integration.rs  workspace.rs
crates/bundle/tests/testcases/expand_module/: Cargo.toml
crates/bundle/tests/testcases/shared_dependency/: Cargo.toml
crates/bundle/tests/testcases/shared_dependency/child/: Cargo.toml
crates/bundle/tests/testcases/shared_dependency/child/src/: lib.rs
crates/bundle/tests/testcases/shared_dependency/entry/: Cargo.toml
crates/bundle/tests/testcases/shared_dependency/entry/src/: lib.rs
crates/bundle/tests/testcases/shared_dependency/grandchild/: Cargo.toml
crates/bundle/tests/testcases/shared_dependency/grandchild/src/: lib.rs
crates/bundle/tests/testcases/workspace_load/: Cargo.toml
crates/bundle/tests/testcases/workspace_load/entry/: Cargo.toml
crates/bundle/tests/testcases/workspace_load_rename/: Cargo.toml
crates/bundle/tests/testcases/workspace_load_rename/entry/: Cargo.toml
crates/urectanc/algebra/: Cargo.toml
crates/urectanc/algebra/src/: lib.rs
crates/urectanc/binary_indexed_tree/: Cargo.toml
crates/urectanc/binary_indexed_tree/src/: lib.rs
crates/urectanc/cartesian_tree/: Cargo.toml
crates/urectanc/cartesian_tree/src/: lib.rs
crates/urectanc/clamp_range/: Cargo.toml
crates/urectanc/clamp_range/src/: lib.rs
crates/urectanc/compressed_sparse_row/: Cargo.toml
crates/urectanc/compressed_sparse_row/src/: lib.rs
crates/urectanc/disjoint_sparse_table/: Cargo.toml
crates/urectanc/disjoint_sparse_table/src/: lib.rs
crates/urectanc/fast_io/: Cargo.toml
crates/urectanc/fast_io/src/: input.rs  lib.rs  output.rs
crates/urectanc/heavy_light_decomposition/: Cargo.toml
crates/urectanc/heavy_light_decomposition/src/: lib.rs
crates/urectanc/interval_set/: Cargo.toml
crates/urectanc/interval_set/src/: lib.rs
crates/urectanc/lazy_segment_tree/: Cargo.toml
crates/urectanc/lazy_segment_tree/src/: lib.rs
crates/urectanc/low_link/: Cargo.toml
crates/urectanc/low_link/src/: lib.rs
crates/urectanc/mo/: Cargo.toml
crates/urectanc/mo/src/: lib.rs
crates/urectanc/modint/: Cargo.toml
crates/urectanc/modint/src/: lib.rs
crates/urectanc/montgomery/: Cargo.toml
crates/urectanc/montgomery/src/: lib.rs  simd.rs
crates/urectanc/num_traits/: Cargo.toml
crates/urectanc/num_traits/src/: lib.rs
crates/urectanc/number_theoretic_transform/: Cargo.toml
crates/urectanc/number_theoretic_transform/src/: lib.rs  simd.rs
crates/urectanc/polynomial/: Cargo.toml
crates/urectanc/polynomial/src/: lib.rs
crates/urectanc/potentialized_union_find/: Cargo.toml
crates/urectanc/potentialized_union_find/src/: lib.rs
crates/urectanc/prime/: Cargo.toml
crates/urectanc/prime/src/: lib.rs
crates/urectanc/rerooting/: Cargo.toml
crates/urectanc/rerooting/src/: lib.rs
crates/urectanc/rolling_hash/: Cargo.toml
crates/urectanc/rolling_hash/src/: lib.rs  mersenne_modint.rs
crates/urectanc/segment_tree/: Cargo.toml
crates/urectanc/segment_tree/src/: lib.rs
crates/urectanc/sliding_window_aggregation/: Cargo.toml
crates/urectanc/sliding_window_aggregation/src/: lib.rs
crates/urectanc/suffix_array/: Cargo.toml
crates/urectanc/suffix_array/src/: lib.rs
crates/urectanc/union_find/: Cargo.toml
crates/urectanc/union_find/src/: lib.rs
crates/urectanc/wavelet_matrix/: Cargo.toml
crates/urectanc/wavelet_matrix/src/: bit_vector.rs  lib.rs
src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
