[workspace]
members = [
    "crates/urectanc/*",
]

[workspace.package]
authors = ["urectanc <urectanc@gmail.com>"]
edition = "2024"
license = "CC0-1.0"
repository = "https://github.com/urectanc/cp-library"
rust-version = "1.89"

[workspace.dependencies]
algebra = { path = "./crates/urectanc/algebra" }
binary_indexed_tree = { path = "./crates/urectanc/binary_indexed_tree" }
cartesian_tree = { path = "./crates/urectanc/cartesian_tree" }
clamp_range = { path = "./crates/urectanc/clamp_range" }
disjoint_sparse_table = { path = "./crates/urectanc/disjoint_sparse_table" }
interval_set = { path = "./crates/urectanc/interval_set" }
lazy_segment_tree = { path = "./crates/urectanc/lazy_segment_tree" }
num_traits = { path = "./crates/urectanc/num_traits" }
segment_tree = { path = "./crates/urectanc/segment_tree" }
sliding_window_aggregation = { path = "./crates/urectanc/sliding_window_aggregation" }

[package]
name = "urectanc"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
algebra.workspace = true
binary_indexed_tree.workspace = true
cartesian_tree.workspace = true
clamp_range.workspace = true
disjoint_sparse_table.workspace = true
interval_set.workspace = true
lazy_segment_tree.workspace = true
num_traits.workspace = true
segment_tree.workspace = true
sliding_window_aggregation.workspace = true
