[package]
name = "bundle"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
cargo_toml = "0.22"
prettyplease = "0.2"
syn = { version = "2", features = ["full", "visit", "visit-mut"] }
